	  renamed to mt32emu-qt_WITH_ALSA_MIDI_SEQUENCER for consistency, and is now set to TRUE by default on Linux systems only.
	* Added handling of fragmented SysExes in ALSA MIDI driver.
	* Improved CoreAudio driver: CoreAudioStream no longer renders data in the GUI thread, a dedicated internal AudioQueue thread is used instead.
	* Added build option mt32emu-qt_WITH_DEBUG_WINCONSOLE. It controls whether a debugging console is shown on Windows.
	* Fixed a bug in LinearResampler that may cause incorrect output at beginning of each audio block.
	* Introduced full-featured internal resampler. The intention is to make resampling less demanding than libsamplerate requires
	  yet to reduce the processing delay libsoxr introduces. That's achieved by taking advantage of oversampled output produced
	  by analog circuit emulation engine and using efficient elliptic low-pass filter instead of FFT-based FIR.
	* Added build option mt32emu-qt_WITH_INTERNAL_RESAMPLER. It controls whether to use internal resampler or try to find an external library.
	* Added support for Qt5.
	* Improved support for 64-bit Windows.
	* Improved support for Cygwin, enabled native Windows MIDI and wave audio API.
	* Improved LCD emulation: when setting standard patches, proper sound group name is shown.
	* Introduced pause function in MIDI player for convenience.
	* About window now shows target arch and used version of Qt library.

2014-12-21:

	1.3.0 released.

	* Fixed incorrect handling of some rarely used control messages in ALSA MIDI driver.
	* Added support for using different sample rates in audio drivers using sample rate conversion.
	  It is still preferable to use default sample rate of MT-32 emulation engine and sample rate conversion
	  should only be used if a different sample rate is necessary (e.g. audio system doesn't support 32000 Hz) or deliberate.
	  For best performance, libsoxr is supported. Libsamplerate is also supported as it is widely available.